--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,3 +1,8 @@
+2012-09-04  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Give more-useful info on a fatal error (Bug#12328).
+	* trouble.texi (Crashing): New section, documenting this.
+
 2012-08-24  Michael Albinus  <michael.albinus@gmx.de>
 
 	* cmdargs.texi (General Variables): Setting
