--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-09-05  Juanma Barranquero  <lekktu@gmail.com>
+
+	* makefile.w32-in ($(BLD)/sysdep.$(O)): Update dependencies.
+
 2012-09-04  Lars Ingebrigtsen  <larsi@gnus.org>
 
 	* eval.c (call_debugger): Make the function non-static so that we
