--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-09-05  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* xdisp.c (set_message): Simplify and reindent last change.
+
 2012-09-05  Juanma Barranquero  <lekktu@gmail.com>
 
 	* makefile.w32-in ($(BLD)/sysdep.$(O)): Update dependencies.
