--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-09-06  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	* alloc.c (mark_object): Revert window marking code
+	since it's unsafe for the Fset_window_configuration.
+
 2012-09-05  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Fix race conditions with signal handlers and errno.
