* lisp/replace.el (replace-lax-whitespace): New defcustom. (query-replace, query-replace-regexp, query-replace-regexp-eval) (replace-string, replace-regexp): Mention it in docstrings. (perform-replace, replace-highlight): Let-bind isearch-lax-whitespace and isearch-regexp-lax-whitespace according to the values of replace-lax-whitespace and regexp-flag. Don't let-bind search-whitespace-regexp.
* lisp/isearch.el (isearch-query-replace): Let-bind
replace-lax-whitespace instead of let-binding
replace-search-function and replace-re-search-function.
(isearch-lazy-highlight-search): Let-bind isearch-lax-whitespace
and isearch-regexp-lax-whitespace to lazy-highlight variables.
(isearch-toggle-symbol): Set isearch-regexp to nil
in isearch-word mode (like in isearch-toggle-word).

--- a/etc/NEWS
+++ b/etc/NEWS
@@ -197,6 +197,13 @@ of one or more whitespace characters defined by the variable
 `isearch-lax-whitespace'.  In regexp incremental search, it toggles
 the value of the variable `isearch-regexp-lax-whitespace'.
 
+** query-replace changes
+
+*** When new option `replace-lax-whitespace' is non-nil,
+and you enter a space or spaces in the strings or regexps
+to be replaced, `query-replace' will match any sequence matched
+by the regexp `search-whitespace-regexp'.
+
 ** M-x move-to-column, if called interactively with no prefix arg, now
 prompts for a column number.
 
